--- a/lib_vecteur/lib_vecteur.vcxproj
+++ b/lib_vecteur/lib_vecteur.vcxproj
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Asus\Documents\ILISI2\POO\TP\StaticLib_vecteur\StaticLib_vecteur;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\oumai\OneDrive\Documents\ILISI2\PHASE 1\POO\TP\StaticLib_vecteur\StaticLib_vecteur;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
