--- a/StaticLib_vecteur/StaticLib_vecteur.vcxproj.filters
+++ b/StaticLib_vecteur/StaticLib_vecteur.vcxproj.filters
@@ -21,8 +21,8 @@
     <ClInclude Include="pch.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="Header.h">
-      <Filter>Fichiers sources</Filter>
+    <ClInclude Include="Header1.h">
+      <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -30,9 +30,6 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="Header.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
